--- a/app/src/main/res/layout/item_local_trend.xml
+++ b/app/src/main/res/layout/item_local_trend.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:scaleType="centerCrop"
+        android:background="@drawable/rounded_bg"
         android:layout_gravity="center" />
 
     <LinearLayout
