--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,6 +49,7 @@
 
     <color name="primaryColor">#6200EE</color> <!-- Change to your desired color -->
     <color name="gray">#757575</color>
+    <color name="purple_500">#6200EE</color>
 
 
 
