--- a/app/src/main/res/layout/activity_seller_register.xml
+++ b/app/src/main/res/layout/activity_seller_register.xml
@@ -301,6 +301,7 @@
             android:layout_height="wrap_content"
             android:text="Select Profile Image"
             android:layout_marginTop="16dp"
+            android:background="@drawable/button_image"
             app:layout_constraintTop_toBottomOf="@id/servicesLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
