--- a/app/src/main/res/layout/activity_seller_details.xml
+++ b/app/src/main/res/layout/activity_seller_details.xml
@@ -266,7 +266,14 @@
                     android:layout_height="match_parent" />
             </LinearLayout>
 
+            <!-- RecyclerView for Comments and Reviews -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/comments_and_review"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:padding="8dp"
+                android:scrollbars="vertical"/>
         </LinearLayout>
     </ScrollView>
-
 </LinearLayout>
