--- a/app/src/main/res/layout/activity_all_recommended_products.xml
+++ b/app/src/main/res/layout/activity_all_recommended_products.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,8 +7,8 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/wallet_holo_blue_light"
         android:padding="16dp"
+        android:background="@color/wallet_holo_blue_light"
         android:gravity="center_vertical">
 
         <!-- Back Button -->
@@ -29,7 +28,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Search Body Products"
+            android:hint="Search Recommended Products"
             android:drawableStart="@drawable/search"
             android:inputType="text"
             android:drawablePadding="8dp"
@@ -39,17 +38,19 @@
 
     </LinearLayout>
 
+    <!-- Label for recommended products -->
     <TextView
         android:id="@+id/label_recommended_products"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Body Category"
+        android:text="Recommended Products"
         android:textSize="18sp"
         android:layout_margin="16dp"/>
 
-
+    <!-- RecyclerView to display recommended products -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_body"
+        android:id="@+id/recyclerViewAllRecommendedProducts"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 </LinearLayout>
