--- a/app/src/main/res/layout/activity_central_components.xml
+++ b/app/src/main/res/layout/activity_central_components.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
+        android:background="@color/wallet_holo_blue_light"
         android:gravity="center_vertical">
 
         <!-- Back Button -->
@@ -16,7 +17,7 @@
             android:id="@+id/btn_back"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/ic_back"
+            android:src="@drawable/ic_back_white"
             android:contentDescription="Back"
             android:layout_marginEnd="10dp"
             android:background="?android:attr/selectableItemBackground"
@@ -37,6 +38,15 @@
             android:textSize="14sp"/>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/label_recommended_products"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Central Components Category"
+        android:textSize="18sp"
+        android:layout_margin="16dp"/>
+
 
 
     <androidx.recyclerview.widget.RecyclerView
